# cerebrus-v2

./: ChessPieces.py  README.md  config.py  dankutils.py  dep.sh  env_variables.sh  global_vars.py  guild_events.py  jailshell.py  keep_alive.py  main.py  misc.py  money.csv  pyproject.toml  server.py  suggestions.txt  todo.txt  unpack.bat  userinfo.json  util.py
classes/: __init__.py
cogs/: dev.py
cogs/config/: mod.py  settings.py
cogs/fun/: fun.py  marry.py
cogs/games/: battleship.py  economy.py  instances.py  rpg.py  stocks.py  ttt.py  vs.py
cogs/misc/: avatar.py  image.py  linux.py  modulus.py  music.py
cogs/txt/: game.txt  giveaway.txt  level.txt  marry.pp  marry.txt  search.txt
cogs/utility/: encryption.py  giveaways.py  ticket.py  utility.py  vouches.py
data/: abc.json  afk.json  ar.json  bio.json  blockedusers.json  config.json  count.json  devs.json  mainbank.json  mod.json  tags.json  times.json  tolock.json  tp.json  users.json  vouch.json  whitelist.json
data/gamefiles/gaw/: controller.py  model.py
data/login/: login.json
data/married/: married.json
data/modulus/: modulus.json
static/: .modules.txt
static/js/: slides.js
templates/: commands.html  index.html
tutorials/datareading/: main.py
